# llm-cst-refactorer

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  run.py
benchmarks/corpus/: add.md  cases.json
docs/demo/: dry-run-diff.cast  dry-run-diff.md
examples/: generate_captured_diff.py  sample_legacy.py
examples/captured/: sample_legacy.unified.diff
src/llm_cst_refactorer/: __init__.py  __main__.py  cache.py  cli.py  client.py  collector.py  config.py  diff_util.py  metrics.py  models.py  prompts.py  repo_index.py  scanner.py  semantic.py  transformer.py  type_verifier.py
src/llm_cst_refactorer/plugins/: __init__.py  base.py  factory.py  init_return_none.py  typing_docstring.py
src/llm_cst_refactorer/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
src/llm_cst_refactorer/verification/: __init__.py  mypy_verifier.py  pipeline.py  schema_verifier.py  syntax_verifier.py
tests/: test_captured_example.py  test_cli.py  test_collector.py  test_diff_util.py  test_providers.py  test_transformer.py  test_type_verifier.py  test_v02_platform.py
tests/fixtures/: complete.py  methods_async.py  missing_all.py
