[tool.poetry]
name = "llm-cst-refactorer"
version = "0.1.0"
description = "Format-preserving LLM docstring and type-hint auto-refactorer powered by LibCST."
authors = ["Divyansh Gupta <divyanshgupta@users.noreply.github.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "llm_cst_refactorer", from = "src" }]
keywords = ["libcst", "typing", "docstring", "llm", "refactor", "mypy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
repository = "https://github.com/divyanshgupta/llm-cst-refactorer"
homepage = "https://github.com/divyanshgupta/llm-cst-refactorer"
documentation = "https://github.com/divyanshgupta/llm-cst-refactorer#readme"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/divyanshgupta/llm-cst-refactorer/issues"

[tool.poetry.scripts]
llm-cst-refactor = "llm_cst_refactorer.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
libcst = "^1.5.0"
typer = { extras = ["all"], version = "^0.15.0" }
rich = "^13.9.0"
pydantic = "^2.10.0"
httpx = "^0.28.0"
anthropic = "^0.43.0"
openai = "^1.59.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
mypy = "^1.14.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"examples/**" = ["ANN", "D"]
"src/llm_cst_refactorer/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["llm_cst_refactorer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
